# sanctions-checker

./: .gitattributes  .gitignore  GEMINI.md  README.md  bq_schema.json  cloudbuild.yaml  dataflow_pipeline.py  find_multipart.py  load_to_bq.py  parse_to_jsonl.py  plan.md  pyproject.toml  requirements.txt  sdn_advanced.xml  sdn_entities.jsonl  search_bq.py  setup.py  test_maps_auth.py  test_parse_snippet.py  test_xml_parsing.py  verify_schema.py
docs/: .gitattributes  advanced_xml.xsd  documentation.md  sdn_advanced.xml  sdn_parser.py
docs/arch/: GEMINI.md  pipeline.md  plan.md
download_sdn/: main.py  requirements.txt
load_and_search/: Dockerfile  address_enrichment.py  dataflow_pipeline.py  find_multipart.py  load_to_bq.py  metadata.json  normalization_logic.py  parse_to_jsonl.py  requirements.txt  search_bq.py  test_parse_snippet.py  verify_schema.py
queries/: README.md  bq_schema.json  count_entities.sql  fuzzy_search.sql  list_countries.sql  search_address.sql
terraform/: .terraform.lock.hcl  dataflow.tf  flex_template.tf  ingestion.tf  main.tf  variables.tf
tests/: integration_test_search_bq.py  test_dataflow_integration.py  test_normalization_integration.py  test_normalization_logic.py  test_robust_search_cases.py  test_search_bq.py  verify_loaded_data.py
