[project]
name = "sanctions-checker"
version = "0.1.0"
description = "Checking for Sanctions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-beam[gcp]>=2.69.0",
    "db-dtypes>=1.4.4",
    "google-cloud-bigquery>=3.38.0",
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (select with '-m integration')",
]
